--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 </head>
 <body>
 <div id="app"></div>
-<script src="./bin/app.bundle.js"></script>
+<script src="lib/app.bundle.js"></script>
 </body>
 </html>
